<resources>
    <string name="app_name" translatable="false">MasalaFoodApplication</string>
    <string name="kitchens">Kitchens</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="favourite">Favourite</string>
    <string name="popular_dishes">popular dishes</string>
    <string name="apply">Apply</string>
    <string name="cuisine">Cuisines</string>
    <string name="reset">Reset</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="start_preparing">Start Preparing</string>
    <string name="suggestion_meals">Suggestion</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="just_for_you">Just for you</string>
    <string name="quick_recipes">Quick and easy</string>
    <string name="ingredient">Ingredient</string>
    <string name="steps">Steps</string>
    <string name="dinner">Dinner</string>
    <string name="img_description" translatable="false">logo</string>
    <string name="required_ingredient">Required Ingredient:</string>
    <string name="start_preparing_your_meal_with_us">Start preparing your meal with us:</string>
    <string name="icon_arrow_back" translatable="false">icon_arrow_back</string>
    <string name="image_of_indian_food" translatable="false">Image of Indian Food</string>
    <string name="history_of_indian_food">History of Indian Food</string>
    <string name="filter_button">Filter Button</string>
    <string name="asian">Asian</string>
    <string name="arabian">Arab</string>
    <string name="indian">Indian</string>
    <string name="kashmir">Kashmiri</string>
    <string name="recipe_image" translatable="false">Image representing the recipe</string>
    <string name="make_your_meal">Make your own indian meal</string>
    <string name="make_your_meal_image">Make your meal Image</string>
    <string name="make_your_meal_button">Make your meal button</string>
    <string name="history_of_indian_cuisine">History of indian cuisine</string>
    <string name="menu_details">Indian cuisine dates back over 5000 years. Each region has its own traditions, religions and culture that influence its food. Hindus tend to be vegetarian and Muslims tend to have meat dishes, although pork is forbidden. Indian food has been influenced by Mongolian, Persian and Chinese cuisine, among others. The common thread throughout the centuries remains the distinct mixing of spices that invariably give Indian cuisine its flavor and aroma.</string>
    <string name="popular">Popular</string>
    <string name="dish_name">Rainbow Sandwich Sugarless</string>
    <string name="start_preparing_btn_text">Start Preparing</string>
    <string name="show_more">show more</string>
    <string name="text_search">Search </string>
    <string name="salad">salad</string>
    <string name="chickpea">Chickpea</string>
    <string name="koshmibir">Koshmibir</string>
    <string name="onion_salad">Onion Salad</string>
    <string name="easy_sprouts">Easy Sprouts</string>
    <string name="ingredients_text">Indian ingredients are as varied as the Indian people and the available foods of each region. Masala means spice blend. Certain foods use certain spice blends. For instance, birlyani masala—cardamom, cinnamon, cloves and fennel—is used for birlyani, an oven-cooked dish of rice and a vegetable, seafood or meat. Chilies, mustard seeds, gram flour, coconut and yogurt are popular ingredients in all types of Indian cuisine. Ghee, a type of clarified butter, is used for cooking, and has a toasty taste. Saffron is used to flavor and color rice dishes. Over 5,000 years you learn to use what you have and be creative with it.</string>
    <string name="ingredients_title">Ingredients</string>
    <string name="regional_cuisine_title">Regional Cuisine</string>
    <string name="regional_cuisine_text">Food choice varies north, south, east and west. Indians from the north eat flat breads like chapati and naan, while Southern Indians prefer to eat rice and coconut. The versatile coconut not only provides milk, it thickens stews, makes a chewy snack and is used in many sweet southern dishes as an ingredient or as a garnish. Western India is more cosmopolitan, but is known for its traditional spicy curries. Mumbai, formerly Bombay, at the heart of the region, is flooded with city dwellers, students and workers. They all have their traditional cuisines, but seafood and curries, hot and spicy sausages and snacks with chai tea are popular traditional fare. East Indian food relies heavily on rice, milk and vegetables, prepared simply with yogurt, seeds and spices steamed and curried. East Indians love their sweets and use milk and other dairy products abundantly in them.</string>
    <string name="filter">filter</string>
    <string name="moroc">moroc</string>
    <string name="south_indian">South Indian</string>
    <string name="component">component</string>
    <string name="recipe_time">Recipe time</string>
    <string name="soup">soup</string>
    <string name="chicken">chicken</string>
    <string name="meat">meat</string>
    <string name="mustard">mustard</string>
    <string name="onion">Onion</string>
    <string name="tomato">tomato</string>
    <string name="kray">Kray</string>
    <string name="random_recipe">Random recipes</string>
    <string name="number">1-</string>
    <string name="indian_food_history">Indian food history</string>
    <string name="popular_cuisines">Most Popular cuisines</string>
    <string name="make_meal">Meals</string>
    <string name="description">description</string>
    <string name="search_here">search</string>
    <string name="cuisines">Cuisines</string>
    <string name="ramadan_2023">Ramadan 2023</string>
    <string name="vegetarian_recipes">Vegetarian recipes</string>
    <string name="step_by_step">Step by step</string>

    <string name="added">Added!</string>
    <string name="deleted">Deleted!</string>
    <string name="select_ingredients">select ingredients</string>
    <string name="here_you_can_add_your_favourite_recieps">Here you can add your favourite recieps</string>
    <string name="text_not_food">There is no food</string>
</resources>