<?xml version="1.0" encoding="utf-8"?>


<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/card_scroll"
    android:backgroundTint="@color/white">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutDescription="@xml/bottom_sheet_dialog_layout_xml_constraintlayout2_scene">

        <View
            android:id="@+id/view"
            android:layout_width="72dp"
            android:layout_height="@dimen/padding_small"

            android:layout_marginTop="16dp"
            android:background="@color/line_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.chip.Chip
            android:id="@+id/chip"
            style="@style/Chips.SelectedChips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="38dp"
            android:text="@string/popular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/steps"
            android:src="@drawable/ic_heart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/chip" />  <!-- this content description is useless -->

        <TextView
            android:id="@+id/textView"
            android:layout_width="191dp"
            android:layout_height="51dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/work_sans_semibold"
            android:text="@string/dish_name"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/text_VLarge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chip" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip3"
            style="@style/Chips.SelectedChips"
            android:layout_width="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/description"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/chip2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip2"
            style="@style/Chips.NonSelectedChips"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/ingredient"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/ingredient_chip"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/chip3"
            app:layout_constraintTop_toTopOf="@+id/chip3" />

        <com.google.android.material.chip.Chip
            android:id="@+id/ingredient_chip"
            style="@style/Chips.NonSelectedChips"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/steps"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/chip2"
            app:layout_constraintTop_toTopOf="@+id/chip3" />

        <TextView
            android:id="@+id/description_tv"
            android:layout_width="0dp"
            android:layout_height="96dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/work_sans"
            android:text="@string/dish_description"
            android:textAlignment="viewStart"
            android:textSize="@dimen/text_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chip2" />

        <Button
            android:id="@+id/button"
            style="@style/Button.PrimaryButton"
            android:layout_gravity="bottom"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/start_preparing_btn_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_tv" />
    </androidx.constraintlayout.motion.widget.MotionLayout>
</FrameLayout>
