<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:elevation="@dimen/no_elevation"
        >
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Surface"
            android:layout_width="match_parent"
            android:fontFamily="@font/work_sans"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/filter" />
    </com.google.android.material.appbar.AppBarLayout>
    <TextView
        android:id="@+id/textView"
        style="@style/Text.TitleChips"
        android:text="@string/kitchens"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBar" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/filter_chip_group_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:singleSelection="false">

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            app:checkedIconTint="@color/white"
            android:textColor="@color/chip_text"
            app:chipBackgroundColor="@color/chip_background2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kashmir"
            android:checked="true"

            />

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            app:checkedIconTint="@color/white"
            android:textColor="@color/chip_text"
            app:chipBackgroundColor="@color/chip_background2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="moroc" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            app:checkedIconTint="@color/white"
            android:textColor="@color/chip_text"
            app:chipBackgroundColor="@color/chip_background2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="South Indian" />
    </com.google.android.material.chip.ChipGroup>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/component"
        android:textColor="@color/app_bar_text_color"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginStart="@dimen/margin_large"
        android:textSize="@dimen/text_small"
        android:fontFamily="@font/work_sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_chip_group_1" />


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/filter_chip_group_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_medium"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:singleSelection="false">

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            app:checkedIconTint="@color/white"
            android:textColor="@color/chip_text"
            app:chipBackgroundColor="@color/chip_background2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kray" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            app:checkedIconTint="@color/white"
            android:textColor="@color/chip_text"
            app:chipBackgroundColor="@color/chip_background2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="tomato" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            app:checkedIconTint="@color/white"
            android:textColor="@color/chip_text"
            app:chipBackgroundColor="@color/chip_background2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Onion" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            app:checkedIconTint="@color/white"
            android:textColor="@color/chip_text"
            app:chipBackgroundColor="@color/chip_background2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="mustard" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            app:checkedIconTint="@color/white"
            android:textColor="@color/chip_text"
            app:chipBackgroundColor="@color/chip_background2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="meat" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            app:checkedIconTint="@color/white"
            android:textColor="@color/chip_text"
            app:chipBackgroundColor="@color/chip_background2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="chicken" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            app:checkedIconTint="@color/white"
            android:textColor="@color/chip_text"
            app:chipBackgroundColor="@color/chip_background2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="soup" />

    </com.google.android.material.chip.ChipGroup>
    <TextView
        android:id="@+id/textView3"
        style="@style/Text.TitleChips"
        android:text="Recipe time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_chip_group_2" />
    <com.google.android.material.slider.Slider
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:stepSize="10.0"
        android:valueFrom="0.0"
        android:valueTo="100.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:tickVisible="false"
        app:thumbColor="@color/text_reset_btn_color"
        app:haloColor="@color/selected_chip_color"
        app:labelStyle="@style/Widget.App.Tooltip"
        />



    <com.google.android.material.button.MaterialButton
        android:id="@+id/apply_button"
        android:text="@string/apply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintTop_toBottomOf="@+id/slider"
        style="@style/Button.PrimaryButton"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reset_button"
        android:text="@string/reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@+id/apply_button"
        style="@style/Button.SecondaryButton"
        />
</androidx.constraintlayout.widget.ConstraintLayout>